# aoc2022

./: README.md  cspell.json  mkday.py  pyproject.toml
aoc2022/: __init__.py  __main__.py  utils.py
aoc2022/_boilerplate/: __init__.py  __main__.py  test_day.py
aoc2022/day01/: __init__.py  __main__.py  test_day.py
aoc2022/day02/: __init__.py  __main__.py  test_day.py
aoc2022/day03/: __init__.py  __main__.py  test_day.py
