# cSpell:words aoc2022 rgxs POSIX pytest pylint mypy

[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = "Solutions to the Advent of Code 2022 Event"
authors = ["Matthew Wyant <me@zanfar.com>"]
license = "GPL-3.0-plus"
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3 :: 3.10",
]


[tool.poetry.scripts]
aoc2022 = 'aoc2022.__main__:cli'

[tool.pylint.basic]
good-names-rgxs = ["^[a-z_][a-z]?"]
no-docstring-rgx = "^_|[Tt]est|[Mm]ock"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
rich = "^12.4"

[tool.poetry.dev-dependencies]
black = "^22.3"
mypy = "^0.961"
pylint = "^2.14"
pytest = "^7.1"
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
